# learning-ros2-control

./: README.md
brushless_test/: CMakeLists.txt  package.xml
brushless_test/copied_from_previous_attempt/: motor_comms.hpp  motor_test.cpp  motor_test_daemon.cpp
brushless_test/include/brushless_test/: DriverErrorToString.hpp  Result.hpp  brushless_driver.hpp
brushless_test/src/: test_motors.cpp
custom_robot_bringup/: CMakeLists.txt  package.xml
custom_robot_bringup/config/: auv_bridge.yaml  auv_controllers.yaml  custom_robot_controllers.yaml
custom_robot_bringup/launch/: auv.gazebo.launch.xml  auv.rviz.launch.xml  custom_robot.gazebo.launch.xml  custom_robot.launch.xml  rviz.xml
custom_robot_bringup/scripts/: cylinder_hydro2.py  generate_box.py  sphere_hydro.py  tethys_hydro2.py
custom_robot_bringup/worlds/: kind_of_working_physics.sdf  water.sdf
custom_robot_description/: CMakeLists.txt  package.xml
custom_robot_description/launch/: display.launch.py  display.launch.xml  display_auv.launch.xml  display_thruster.launch.xml
custom_robot_description/rviz/: auv_display.rviz  config2.rviz  display.rviz
custom_robot_description/urdf/: auv.urdf.xacro  auv_base.xacro  auv_basic2.xacro  auv_gazebo.xacro  auv_ros2_control.xacro  auv_thrust.xacro  common_properties.xacro  custom_robot_gazebo_ros2_control.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  steerable_propeller.xacro  thrust.urdf.xacro
custom_robot_hardware/: CMakeLists.txt  custom_robot_hardware_interface.xml  package.xml
custom_robot_hardware/include/custom_robot_hardware/: DriverError.hpp  DriverErrorToString.hpp  PigpioDCMotorDriver.hpp  propeller_hardware_interface.hpp
custom_robot_hardware/src/: propeller_hardware_interface.cpp
custom_robot_teleop/: package.xml  setup.cfg  setup.py
custom_robot_teleop/custom_robot_teleop/: auv_twist_mapper.py  cmd_vel_to_single_array.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: my_robot_controllers.yaml
my_robot_bringup/launch/: my_robot.gazebo.launch.xml  my_robot.launch.py  my_robot.launch.xml  rviz.xml
my_robot_controllers/: CMakeLists.txt  my_controller_plugin.xml  package.xml
my_robot_controllers/include/my_robot_controllers/: my_controller.hpp
my_robot_controllers/src/: my_controller.cpp
my_robot_description/launch/: display.launch.xml
my_robot_description/urdf/: arm.ros2_control.xacro  arm.xacro  common_properties.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  my_robot.urdf.xacro  my_robot_gazebo_ros2_control.xacro
my_robot_hardware/: CMakeLists.txt  my_robot_hardware_interface.xml  package.xml
my_robot_hardware/include/my_robot_hardware/: DriverErrorToString.hpp  PigpioDCMotorDriver.hpp  PigpioServoDriver.hpp  arm_hardware_interface.hpp  mobile_base_hardware_interface.hpp
my_robot_hardware/src/: arm_hardware_interface.cpp  mobile_base_hardware_interface.cpp
